docs: classifier-jar consumer usage, custom-build path, honest platform coverage